# personality-test-nyota

./: .gitignore  README.md  app.py  diag.py  index.html  nyota_calculator.py  nyota_rapport_complet.html  nyota_rapport_ecrit.txt  pyproject.toml  question.js  reponse_per1.json  requirements.txt  script.js  style.css
