[project]
name = "personality-test-nyota"
version = "0.1.0"
description = "Personality test application"
requires-python = ">=3.9"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "numpy==1.24.3",
    "matplotlib==3.7.2",
    "gunicorn==20.1.0",
    "plotly==5.15.0",
    "pandas==2.0.3",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
